--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "node --max_old_space_size=2048 node_modules/.bin/react-scripts start",
+    "build": "node --max_old_space_size=2048 node_modules/.bin/react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
