--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "react-scripts": "3.3.1"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2048 node_modules/.bin/react-scripts start",
-    "build": "node --max_old_space_size=2048 node_modules/.bin/react-scripts build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
