--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "my-app",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "12.16.0",
+    "npm": "6.14.15"
+  },
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
