--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "engines": {
-    "node": "12.16.0",
-    "npm": "6.14.5"
+    "node": "12.16.0"
   },
   "keywords": [],
   "main": "src/index.js",
